src/page/ZiltagMapPage/index.css
.ziltag-ziltag-map-page {
  font-family: Roboto, GillSans, Calibri, Trebuchet, sans-serif;
}

.ziltag-ziltag-map-page__ziltag {
  display: flex;
  height: 122px;
  background: white;
  border-radius: 3px;
  padding: 15px 17px 0;
  text-decoration: none;
}

.ziltag-ziltag-map-page__ziltag:last-of-type {
  padding: 15px 17px;
}

.ziltag-ziltag-map-page__ziltag--activated {
  background: rgba(0, 0, 0, .12);
}

.ziltag-ziltag-map-page__heading {
  font-size: 34px;
  font-weight: normal;
  padding-bottom: 20px;
  border-bottom: 1px solid rgba(0, 0, 0, .12);
}

.ziltag-ziltag-map-page__ziltag-user-avatar {
  width: 40px;
  height: 40px;
}

.ziltag-ziltag-map-page__ziltag-user-name {
  font-size: 14px;
  font-weight: 500;
  color: rgba(0, 0, 0, .87);
  line-height: 22px;
}

.ziltag-ziltag-map-page__ziltag-content {
  height: 100px;
  font-size: 14px;
  line-height: 20px;
  color: rgba(0,0,0,.87);
  word-wrap: break-word;
  overflow: hidden;
}

.ziltag-ziltag-map-page__anchorify-text {
  color: #0074D9;
  text-decoration: underline;
}

.ziltag-ziltag-map-page .ziltag-ziltag-map-page__ziltag {
  margin-bottom: 14px;
}

.ziltag-ziltag-map-page .ziltag-ziltag-map-page__heading {
  margin: 17px 0 14px;
}

.ziltag-ziltag-map-page__ziltag .ziltag-ziltag-map-page__ziltag-user-avatar {
  margin-right: 10px;
}

